<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Awair</string>
    <string name="app_version">Version 1.1.6</string>
    <string name="action_settings">Settings</string>
    <string name="fb_app_id">267158523448295</string>
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Particle Pollutants</item>
        <item >Chemical Pollutants</item>
        <item >Gaseous Pollutants</item>
        <item >Compare Air Quality</item>
        <item >About</item>
        <!--<item >Share Air Quality</item>-->
        <!--<item >Settings</item>-->
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/particle</item>
        <item>@drawable/chemical</item>
        <item>@drawable/gas</item>
        <item>@drawable/ic_action_location_web_site</item>
        <item>@drawable/ic_action_about</item>
        <!--<item>@android:drawable/ic_menu_share</item>-->
        <!--<item>@android:drawable/ic_menu_manage</item>-->
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
    <string name="pm25info">Particulate matter, or PM, is the term for particles found in the air, including dust, dirt, soot, smoke, fumes, ash, pollen and liquid droplets. Particulate matter is characterized according to size - mainly because of the different health effects associated with particles of different diameters. Both PM10 (big) and PM2.5 (small) particles can cause health problems; specifically respiratory health.</string>
 	<string name="pm25vg">[0-15]    Relatively harmless. However extremely sensitive people should take care.</string>
 	<string name="pm25g">[16-31]    Sensitive populations may want to exercise caution.</string>
 	<string name="pm25m">[32-49]    People with respiratory disease at some risk.</string>
 	<string name="pm25p">[50-99]    People with respiratory disease should limit prolonged exertion; general populatuion at some risk.</string>
 	<string name="pm25b">[100 or over]    Serious respiratory effects even during light physical activity; people with heart disease, the elderly and children at high risk.</string>
	
 	<string name="chemicalinfo">Chemical pollutants generally occur due to burning of fuels. Pollutants such as carbon monoxide, nitrogen dioxide, sulphur dioxide and hydrogen sulphide combine with air and can have adverse effects on the health of both humans and environment. Major chemical pollutants are carbon monoxide, nitrogen oxides and sulphur dioxide.</string>
	<string name="chemicalvg">[0-15]    No health effects are expected in healthy people.</string>
 	<string name="chemicalg">[16-31]    People sensitive to changes in chemical pollutants should take care.</string>
 	<string name="chemicalm">[32-49]    Blood chemistry changes but no noticeable impairment.</string>
 	<string name="chemicalp">[50-99]    Increased symptoms in smokers with heart disease.</string>
 	<string name="chemicalb">[100 or over]    Increasing symptoms in non-smokers with heart disease; blurred vision; some clumsiness.</string>
 	
 	<string name="gaseousinfo">Most of the pollutants in air are in the gaseous for and they can cause serious problem if inhaled. Ozone is one of the major contributor to air pollutions. The properties that make ozone a powerful cleaner, disinfectant, and bleaching agent also make ozone dangerous to living tissues. When it comes in contact with living tissues, like our lungs, ozone attacks and damages cells lining the airways, this causes swelling and inflammation. Some have compared ozone\'s effect to a sunburn ... inside your lungs</string>
	<string name="gaseousvg">[0-15]    No health effects are expected in healthy people.</string>
 	<string name="gaseousg">[16-31]    People sensitive to changes in gaseous pollutants should take care.</string>
 	<string name="gaseousm">[32-49]    Respiratory irritation in sensitive people during vigorous exercise; people with heart/lung disorders at some risk.</string>
 	<string name="gaseousp">[50-99]    Sensitive people may experience irritation when breating and possible lung damage when physically active.</string>
 	<string name="gaseousb">[100 or over]    Serious respiratory effects, even during light physical activity. Dangerous for vegetation.</string>

	<string name="suggest_good">It\'s great out there.</string>
	<string name="suggest_moderate">Air quality around you is not good.</string>
	<string name="suggest_bad">Please wear a mask. It\'s not good out there.</string>

	<!-- Settings resources -->
	<string name="enable_notification">Enable Notifications</string>
	<string name="enable_did_u_know">Enable Did you know</string>
	
	
</resources>