<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/fb_light_blue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_gaseous_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gaseousinfo"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/clouds"
            android:textSize="@dimen/smallText"
            android:textColor="@color/darkgray" />

        <TextView
            android:id="@+id/lblgaseousvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallText"
            android:padding="5dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@color/verygood"
            android:text="@string/gaseousvg" />
        
        <TextView
            android:id="@+id/lblgaseousg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallText"
            android:padding="5dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@color/good"
            android:text="@string/gaseousg" />
        <TextView
            android:id="@+id/lblgaseousm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallText"
            android:padding="5dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@color/moderate"
            android:text="@string/gaseousm" />
        <TextView
            android:id="@+id/lblgaseousp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallText"
            android:padding="5dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@color/poor"
            android:text="@string/gaseousp" />
        <TextView
            android:id="@+id/lblgaseousb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallText"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/bad"
            android:text="@string/gaseousb" />


    </LinearLayout>

</LinearLayout>
</ScrollView>